[gd_scene load_steps=2 format=3 uid="uid://ddf0mchcyene6"]

[ext_resource type="Script" path="res://Scripts/UI/Menus/PauseMenu.gd" id="1_ghwr8"]

[node name="Pause" type="Control"]
process_mode = 2
z_index = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ghwr8")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -40.0
offset_right = 100.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2

[node name="Buttons_VB" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="ResumeGame_BTN" type="Button" parent="PanelContainer/Buttons_VB"]
layout_mode = 2
size_flags_vertical = 3
text = "Resume Game
"

[node name="RestartGame_BTN" type="Button" parent="PanelContainer/Buttons_VB"]
layout_mode = 2
size_flags_vertical = 3
text = "Restart Game
"

[node name="QuitToMainMenu_BTN" type="Button" parent="PanelContainer/Buttons_VB"]
layout_mode = 2
size_flags_vertical = 3
text = "Quit to Main Menu
"

[node name="QuitGame_BTN" type="Button" parent="PanelContainer/Buttons_VB"]
layout_mode = 2
size_flags_vertical = 3
text = "Quit Game
"

[connection signal="button_down" from="PanelContainer/Buttons_VB/ResumeGame_BTN" to="." method="_on_resume_game_btn_button_down"]
[connection signal="button_down" from="PanelContainer/Buttons_VB/RestartGame_BTN" to="." method="_on_restart_game_btn_button_down"]
[connection signal="button_down" from="PanelContainer/Buttons_VB/QuitToMainMenu_BTN" to="." method="_on_quit_to_main_menu_btn_button_down"]
[connection signal="button_down" from="PanelContainer/Buttons_VB/QuitGame_BTN" to="." method="_on_quit_game_btn_button_down"]
